# plot_tool

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY.md  README.md
cpp/: .clang-format  CMakeLists.txt
cpp/axes/: CMakeLists.txt  axes.h  axes_interactor.cpp  axes_interactor.h  axes_painter.cpp  axes_painter.h
cpp/axes/plot_box/: plot_box_coordinate_arrows.cpp  plot_box_coordinate_arrows.h  plot_box_grid.cpp  plot_box_grid.h  plot_box_grid_numbers.cpp  plot_box_grid_numbers.h  plot_box_outline.cpp  plot_box_outline.h  plot_box_walls.cpp  plot_box_walls.h
cpp/axes/structures/: axes_limits.cpp  axes_limits.h  axes_settings.cpp  axes_settings.h  coordinate_converter.cpp  coordinate_converter.h  grid_vectors.h  view_angles.cpp  view_angles.h
cpp/communication/: CMakeLists.txt  rx_classes.h  rx_list.h  rx_list_helper_functions.h  server.cpp  server.h  socket_communication_utilities.h
cpp/communication/cpp_interface/: logging.h  plot_tool.h
cpp/communication/cpp_interface/image/: image.h
cpp/communication/cpp_interface/internal/: client.h  communication_functions.h  communication_variables.h
cpp/communication/cpp_interface/math/: coordinates.h  geometry.h  lin_alg.h  math.h  math_core.h  structures.h  transformations.h
cpp/communication/cpp_interface/math/coordinates/: complex.h  cylindrical.h  polar.h  spherical.h
cpp/communication/cpp_interface/math/coordinates/class_defs/: complex_class_def.h  cylindrical_class_def.h  polar_class_def.h  spherical_class_def.h
cpp/communication/cpp_interface/math/geometry/: circle.h  line_2d.h  line_3d.h  plane.h  sphere.h
cpp/communication/cpp_interface/math/geometry/class_defs/: circle_class_def.h  line_2d_class_def.h  line_3d_class_def.h  plane_class_def.h  sphere_class_def.h  triangle_class_def.h
cpp/communication/cpp_interface/math/lin_alg/: matrix_vector_dynamic.h  matrix_vector_fixed.h
cpp/communication/cpp_interface/math/lin_alg/matrix_dynamic/: matrix_dynamic.h  matrix_math_functions.h
cpp/communication/cpp_interface/math/lin_alg/matrix_dynamic/class_defs/: matrix_dynamic_class_def.h
cpp/communication/cpp_interface/math/lin_alg/matrix_fixed/: matrix_fixed.h
cpp/communication/cpp_interface/math/lin_alg/vector_dynamic/: vector_dynamic.h  vector_math_functions.h
cpp/communication/cpp_interface/math/lin_alg/vector_dynamic/class_defs/: vector_dynamic_class_def.h
cpp/communication/cpp_interface/math/lin_alg/vector_fixed/: vector_fixed.h
cpp/communication/cpp_interface/math/lin_alg/vector_low_dim/: vec2d.h  vec3d.h  vec4d.h
cpp/communication/cpp_interface/math/lin_alg/vector_low_dim/class_defs/: vec2d_class_def.h  vec3d_class_def.h  vec4d_class_def.h
cpp/communication/cpp_interface/math/misc/: math_macros.h  math_type_definitions.h
cpp/communication/cpp_interface/math/structures/: end_index.h  index_span.h  interval_1d.h
cpp/communication/cpp_interface/math/transformations/: axis_angle.h  pose.h  quaternion.h  roll_pitch_yaw.h
cpp/communication/cpp_interface/math/transformations/class_defs/: axis_angle_class_def.h  pose_class_def.h  quaternion_class_def.h  roll_pitch_yaw_class_def.h
cpp/communication/cpp_interface/shared/: base_types.h  enumerations.h  plot_attributes.h  transmission.h  util_functions.h
cpp/communication/demos/: build_demos.sh  demo0.cpp  demo1.cpp  demo2  demo2.cpp
cpp/communication/shared/: base_types.h  enumerations.h  plot_attributes.h  transmission.h  util_functions.h
cpp/io_devices/: CMakeLists.txt  io_devices.h  keyboard_state.cpp  keyboard_state.h  mouse_state.cpp  mouse_state.h
cpp/main_application/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window_plot_handler.cpp  plot_data.cpp  plot_data.h  plot_window.cpp  plot_window.h  plot_window_gl_pane.cpp  plot_window_gl_pane.h
cpp/main_application/plot_objects/: draw_line3d.h  draw_line_between_points_3d.h  draw_plane_xy.h  draw_plane_xz.h  draw_plane_yz.h  draw_polygon_4_points.h  plot2d.h  plot3d.h  plot_object_base.h  plot_objects.h  scatter.h  scatter3.h  surf.h
cpp/misc/: CMakeLists.txt  misc.h  number_formatting.cpp
cpp/opengl_low_level/: CMakeLists.txt  data_structures.h  opengl_header.h  opengl_low_level.h  opengl_text.cpp  opengl_text.h
cpp/opengl_low_level/2d/: opengl_2d_functions.cpp  opengl_2d_functions.h  opengl_2d_shape_primitives.cpp  opengl_2d_shape_primitives.h
cpp/opengl_low_level/3d/: opengl_3d_functions.cpp  opengl_3d_functions.h  opengl_3d_shape_primitives.cpp  opengl_3d_shape_primitives.h
cpp/plot_functions/: CMakeLists.txt  plot_functions.cpp  plot_functions.h
docker/: Dockerfile  docker_build.sh  docker_full_clean.sh  docker_stop_running.sh
